shift click selection fix

--- a/src/styles/cell.css
+++ b/src/styles/cell.css
@@ -5,7 +5,8 @@
 }
 
 .cell_isActive {
-    box-shadow: 0 0 0 1px #009ADE inset;
+    /*box-shadow: 0 0 0 1px #009ADE inset;*/
+    background: #C7E6F8;
 }
 
 .cell_isSelected {
@@ -13,6 +14,7 @@
 }
 
 .cell__input {
+    background: #C7E6F8;
     box-sizing: border-box;
     line-height: 17px;
     padding: 0;
@@ -21,7 +23,6 @@
     outline: none;
     box-shadow: none;
     resize: none;
-    background: white;
     height: 17px;
     color: #2d2d2d;
     font-size: 14px;
